# cfe_sntp

./: .gitmodules  CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: codeql-build.yml
fsw/mission_inc/: sntp_perfids.h
fsw/platform_inc/: sample_app_msgids.h  sntp_msgids.h  sntp_table.h
fsw/src/: core_sntp_config.h  sntp.c  sntp.h  sntp_events.h  sntp_msg.h  sntp_utils.c  sntp_utils.h  sntp_version.h
tools/: CMakeLists.txt  client_test.c  server_test.c
unit-test/: CMakeLists.txt
unit-test/coveragetest/: coveragetest_sample_app.c  sample_app_coveragetest_common.h
unit-test/inc/: ut_sample_app.h
